Colaboratory を使用して作成しました

--- a/kaggle_House_Prices_Advanced_Regression_Techniques_vol2.ipynb
+++ b/kaggle_House_Prices_Advanced_Regression_Techniques_vol2.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle_House Prices - Advanced Regression Techniques_vol2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6hDB5QJqUoqjHXS94Gzcw",
+      "authorship_tag": "ABX9TyMy5ffj+D6h0ohJdQqaaNXz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,7 +50,7 @@
           "height": 253
         },
         "id": "TbSlnzKprp50",
-        "outputId": "bfc69096-75ff-45d6-ab33-8a57afe72a4a"
+        "outputId": "ea0281d4-c0a0-40c9-d465-628b23ef6f46"
       },
       "source": [
         "df_train = pd.read_csv('train.csv')\n",
@@ -58,7 +58,7 @@
         "df_sub = pd.read_csv('sample_submission.csv')\n",
         "df_train.head()"
       ],
-      "execution_count": 166,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 9
         }
       ]
     },
@@ -619,7 +619,7 @@
       "source": [
         "df_train.info()"
       ],
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,13 +724,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7kLBmHhNrqBs",
-        "outputId": "dc94c742-9f1b-4b05-fe1f-c42b9632220d"
+        "outputId": "561a0482-c3ad-419d-bc47-6ecc4834e3a6"
       },
       "source": [
         "columns = df_train.columns\n",
         "columns"
       ],
-      "execution_count": 169,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +757,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 169
+          "execution_count": 10
         }
       ]
     },
@@ -768,7 +768,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Elbg1dlfrqHO",
-        "outputId": "6fd67fb3-4804-49e4-f542-0343a3bd1151"
+        "outputId": "1c240760-aecb-415c-acb4-e9ab36bbe482"
       },
       "source": [
         "# 相関性の低いカラムを削除,objectのカラムは残す。\n",
@@ -785,7 +785,7 @@
         "            drop_col.append(column)\n",
         "print(drop_col)"
       ],
-      "execution_count": 170,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,12 +842,12 @@
           "height": 223
         },
         "id": "juMQF_i1rqJu",
-        "outputId": "d5eba390-3f45-4678-d1b9-6d6f1d903d39"
+        "outputId": "0b2bb40b-b2a2-4037-ad67-1d362c22566e"
       },
       "source": [
         "df_train.head()"
       ],
-      "execution_count": 171,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1229,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 171
+          "execution_count": 12
         }
       ]
     },
@@ -1240,7 +1240,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4z14C6FrqMd",
-        "outputId": "c49b2e22-eabd-453b-e546-de642e9bc6b7"
+        "outputId": "d255ef61-47f0-4212-f5fc-b6f34d13adf0"
       },
       "source": [
         "# 各カラムのカテゴリ変数数をカウント\n",
@@ -1248,7 +1248,7 @@
         "for column in columns:\n",
         "    print(column, df_train[column].nunique())"
       ],
-      "execution_count": 172,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1324,7 @@
       "source": [
         "df_train.groupby('LandSlope')['SalePrice'].mean()"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ZB4GtpGuyRO",
-        "outputId": "9fdbf8f2-212a-4b57-e628-cff6af1f430a"
+        "outputId": "8cf2f3b1-b1c7-4403-92a2-5f6663e3af98"
       },
       "source": [
         "# 各カテゴリ変数別の平均値の最大/最小値の差を確認、\n",
@@ -1363,7 +1363,7 @@
         "        df_train = df_train.drop(column, axis=1)\n",
         "        print(column, ratio_v)"
       ],
-      "execution_count": 175,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,6 +1388,7 @@
         "id": "gBL8SYIESfJE"
       },
       "source": [
+        "\n",
         "# 欠損値の補完\n",
         "df_train = df_train.fillna(df_train.mean())\n",
         "# 欠損値の多いカラムは削除し、欠損値を削除\n",
@@ -1396,9 +1397,9 @@
         "    lack_cont = df_train[column].isnull().sum()\n",
         "    if lack_cont > 50:\n",
         "        df_train = df_train.drop(column, axis=1)\n",
-        "df_train = df_train.dropna()"
+        "df_train = df_train.dropna()\n"
       ],
-      "execution_count": 176,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1407,6 +1408,7 @@
         "id": "_752O5w8ERfP"
       },
       "source": [
+        "\n",
         "# 'SalePrice'の平均値に応じて、カテゴリごとのポイント付け\n",
         "columns = df_train.columns\n",
         "for column in columns:\n",
@@ -1415,9 +1417,9 @@
         "    for unique in uniques:\n",
         "        unique_v = df_train.groupby(column)['SalePrice'].mean()[unique]\n",
         "        df_train[column].replace(unique, unique_v, inplace=True)\n",
-        "        # 値をinplace=Trueで置き換え"
+        "        # 値をinplace=Trueで置き換え\n"
       ],
-      "execution_count": 182,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1428,12 +1430,12 @@
           "height": 439
         },
         "id": "GH28wKvVERoM",
-        "outputId": "9c83e35f-7eee-4a87-8a60-fd270802d192"
+        "outputId": "926e162c-c694-458e-fb17-07ca5e608905"
       },
       "source": [
         "df_train"
       ],
-      "execution_count": 183,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1972,7 +1974,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 183
+          "execution_count": 17
         }
       ]
     },
@@ -1982,9 +1984,12 @@
         "id": "lzwzwfMOEKWg"
       },
       "source": [
-        "# 線形回帰"
+        "from sklearn.model_selection import train_test_split\n",
+        "t = df_train['SalePrice'].values\n",
+        "X = df_train.drop(labels=['SalePrice'], axis=1)\n",
+        "X_train, X_test,t_train, t_test = train_test_split(X, t, test_size=0.3, random_state=0) "
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1993,73 +1998,85 @@
         "id": "AcnYktjxXyIB"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression"
-      ],
-      "execution_count": 184,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9bwCJIxsXyKi"
-      },
-      "source": [
-        "t = df_train['SalePrice'].values\n",
-        "X = df_train.drop(labels=['SalePrice'], axis=1)\n",
-        "X_train, X_test,t_train, t_test = train_test_split(X, t, test_size=0.3, random_state=0) "
-      ],
-      "execution_count": 186,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2xNHa8WUX5Ti",
-        "outputId": "a5750cce-1f8d-40f8-8e15-32233a0d7016"
-      },
-      "source": [
+        "# 線形回帰\n",
+        "'''\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "LR_model = LinearRegression()\n",
-        "LR_model.fit(X_train, t_train)"
+        "LR_model.fit(X_train, t_train)\n",
+        "print(f'train score:{LR_model.score(X_train, t_train)}')\n",
+        "print(f'test score:{LR_model.score(X_test, t_test)}')\n",
+        "\n",
+        "'''"
       ],
-      "execution_count": 187,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression()"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 187
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9bwCJIxsXyKi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SSULj2SPX5Wc",
-        "outputId": "3f4c3276-2ac7-4c2b-82b4-1d347c2ef528"
+        "outputId": "e2a5432c-a3d5-49f2-c5a4-13aa0dda6cab"
       },
       "source": [
-        "print(f'train score:{LR_model.score(X_train, t_train)}')\n",
-        "print(f'test score:{LR_model.score(X_test, t_test)}')"
+        "# LightGBM\n",
+        "\n",
+        "import lightgbm as lgb\n",
+        "trains = lgb.Dataset(X_train, t_train)\n",
+        "valids = lgb.Dataset(X_test, t_test)\n",
+        "params = {'objective':'regression', 'metrics':'mae'}\n",
+        "model = lgb.train(params, trains, valid_sets=valids, num_boost_round=100, early_stopping_rounds=10)\n",
+        "pred = model.predict(X_test)"
       ],
-      "execution_count": 188,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "train score:0.9597916684860137\n",
-            "test score:0.9492394329035468\n"
+            "[1]\tvalid_0's l1: 50736.2\n",
+            "Training until validation scores don't improve for 10 rounds.\n",
+            "[2]\tvalid_0's l1: 45809.8\n",
+            "[3]\tvalid_0's l1: 41540.9\n",
+            "[4]\tvalid_0's l1: 37905.1\n",
+            "[5]\tvalid_0's l1: 34618.1\n",
+            "[6]\tvalid_0's l1: 31627.7\n",
+            "[7]\tvalid_0's l1: 28854.4\n",
+            "[8]\tvalid_0's l1: 26497.5\n",
+            "[9]\tvalid_0's l1: 24325.5\n",
+            "[10]\tvalid_0's l1: 22572.2\n",
+            "[11]\tvalid_0's l1: 20990.3\n",
+            "[12]\tvalid_0's l1: 19622.8\n",
+            "[13]\tvalid_0's l1: 18507.1\n",
+            "[14]\tvalid_0's l1: 17581\n",
+            "[15]\tvalid_0's l1: 16690.1\n",
+            "[16]\tvalid_0's l1: 16016.9\n",
+            "[17]\tvalid_0's l1: 15419.2\n",
+            "[18]\tvalid_0's l1: 14956.9\n",
+            "[19]\tvalid_0's l1: 14513.1\n",
+            "[20]\tvalid_0's l1: 14162.7\n",
+            "[21]\tvalid_0's l1: 13906\n",
+            "[22]\tvalid_0's l1: 13722.4\n",
+            "[23]\tvalid_0's l1: 13553.6\n",
+            "[24]\tvalid_0's l1: 13438.7\n",
+            "[25]\tvalid_0's l1: 13383.3\n",
+            "[26]\tvalid_0's l1: 13356.1\n",
+            "[27]\tvalid_0's l1: 13343.7\n",
+            "[28]\tvalid_0's l1: 13361.7\n",
+            "[29]\tvalid_0's l1: 13382.2\n",
+            "[30]\tvalid_0's l1: 13394.8\n",
+            "[31]\tvalid_0's l1: 13391.3\n",
+            "[32]\tvalid_0's l1: 13399.4\n",
+            "[33]\tvalid_0's l1: 13421\n",
+            "[34]\tvalid_0's l1: 13453.7\n",
+            "[35]\tvalid_0's l1: 13499.5\n",
+            "[36]\tvalid_0's l1: 13530\n",
+            "[37]\tvalid_0's l1: 13558\n",
+            "Early stopping, best iteration is:\n",
+            "[27]\tvalid_0's l1: 13343.7\n"
           ]
         }
       ]
@@ -2082,12 +2099,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MYrBm39aX5co",
-        "outputId": "f3776c9e-ef7b-41c0-9433-58b04f1e50f7"
+        "outputId": "b1dbcf38-cd91-4a0e-ced7-ca21b99a1fdb"
       },
       "source": [
         "df_train.columns"
       ],
-      "execution_count": 189,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2105,7 +2122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 189
+          "execution_count": 21
         }
       ]
     },
@@ -2124,7 +2141,7 @@
         "       'TotRmsAbvGrd', 'Functional', 'GarageCars', 'GarageArea', 'PavedDrive',\n",
         "       'SaleType', 'SaleCondition']]"
       ],
-      "execution_count": 190,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -2135,7 +2152,7 @@
       "source": [
         "df_test = df_test.fillna(df_train.mean())"
       ],
-      "execution_count": 191,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -2145,12 +2162,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0qD3D9KjY8n8",
-        "outputId": "e08d2495-a89a-44d2-96ea-1998a22817b5"
+        "outputId": "a01bc381-3f2d-4501-9e37-edf2ab7b31a2"
       },
       "source": [
         "df_test.info()"
       ],
-      "execution_count": 192,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -2161,45 +2178,45 @@
             "Data columns (total 37 columns):\n",
             " #   Column         Non-Null Count  Dtype  \n",
             "---  ------         --------------  -----  \n",
-            " 0   MSZoning       1459 non-null   object \n",
-            " 1   LandContour    1459 non-null   object \n",
-            " 2   Neighborhood   1459 non-null   object \n",
-            " 3   Condition1     1459 non-null   object \n",
-            " 4   Condition2     1459 non-null   object \n",
-            " 5   HouseStyle     1459 non-null   object \n",
+            " 0   MSZoning       1459 non-null   float64\n",
+            " 1   LandContour    1459 non-null   int64  \n",
+            " 2   Neighborhood   1459 non-null   int64  \n",
+            " 3   Condition1     1459 non-null   int64  \n",
+            " 4   Condition2     1459 non-null   int64  \n",
+            " 5   HouseStyle     1459 non-null   int64  \n",
             " 6   OverallQual    1459 non-null   int64  \n",
             " 7   YearBuilt      1459 non-null   int64  \n",
             " 8   YearRemodAdd   1459 non-null   int64  \n",
-            " 9   RoofStyle      1459 non-null   object \n",
-            " 10  RoofMatl       1459 non-null   object \n",
-            " 11  Exterior1st    1459 non-null   object \n",
-            " 12  Exterior2nd    1459 non-null   object \n",
-            " 13  MasVnrType     1459 non-null   object \n",
-            " 14  ExterQual      1459 non-null   object \n",
-            " 15  ExterCond      1459 non-null   object \n",
-            " 16  Foundation     1459 non-null   object \n",
-            " 17  BsmtQual       1459 non-null   object \n",
-            " 18  BsmtCond       1459 non-null   object \n",
-            " 19  BsmtExposure   1459 non-null   object \n",
-            " 20  BsmtFinType1   1459 non-null   object \n",
+            " 9   RoofStyle      1459 non-null   int64  \n",
+            " 10  RoofMatl       1459 non-null   int64  \n",
+            " 11  Exterior1st    1459 non-null   int64  \n",
+            " 12  Exterior2nd    1459 non-null   int64  \n",
+            " 13  MasVnrType     1459 non-null   float64\n",
+            " 14  ExterQual      1459 non-null   int64  \n",
+            " 15  ExterCond      1459 non-null   int64  \n",
+            " 16  Foundation     1459 non-null   int64  \n",
+            " 17  BsmtQual       1459 non-null   float64\n",
+            " 18  BsmtCond       1459 non-null   float64\n",
+            " 19  BsmtExposure   1459 non-null   float64\n",
+            " 20  BsmtFinType1   1459 non-null   float64\n",
             " 21  TotalBsmtSF    1459 non-null   float64\n",
-            " 22  Heating        1459 non-null   object \n",
-            " 23  HeatingQC      1459 non-null   object \n",
-            " 24  CentralAir     1459 non-null   object \n",
-            " 25  Electrical     1459 non-null   object \n",
+            " 22  Heating        1459 non-null   int64  \n",
+            " 23  HeatingQC      1459 non-null   int64  \n",
+            " 24  CentralAir     1459 non-null   int64  \n",
+            " 25  Electrical     1459 non-null   int64  \n",
             " 26  1stFlrSF       1459 non-null   int64  \n",
             " 27  GrLivArea      1459 non-null   int64  \n",
             " 28  FullBath       1459 non-null   int64  \n",
-            " 29  KitchenQual    1459 non-null   object \n",
+            " 29  KitchenQual    1459 non-null   float64\n",
             " 30  TotRmsAbvGrd   1459 non-null   int64  \n",
-            " 31  Functional     1459 non-null   object \n",
+            " 31  Functional     1459 non-null   float64\n",
             " 32  GarageCars     1459 non-null   float64\n",
             " 33  GarageArea     1459 non-null   float64\n",
-            " 34  PavedDrive     1459 non-null   object \n",
-            " 35  SaleType       1459 non-null   object \n",
-            " 36  SaleCondition  1459 non-null   object \n",
-            "dtypes: float64(3), int64(7), object(27)\n",
-            "memory usage: 421.9+ KB\n"
+            " 34  PavedDrive     1459 non-null   int64  \n",
+            " 35  SaleType       1459 non-null   float64\n",
+            " 36  SaleCondition  1459 non-null   int64  \n",
+            "dtypes: float64(12), int64(25)\n",
+            "memory usage: 421.9 KB\n"
           ]
         }
       ]
@@ -2217,9 +2234,9 @@
         "    for unique in uniques:\n",
         "        df_test[column].replace(unique, unique_v, inplace=True)\n",
         "        # 値をinplace=Trueで置き換え\n",
-        "pred = LR_model.predict(df_test)"
+        "# pred = LR_model.predict(df_test)"
       ],
-      "execution_count": 194,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -2229,11 +2246,12 @@
       },
       "source": [
         "# 予測値入力、提出ファイル出力\n",
+        "pred = model.predict(df_test)\n",
         "df_gen = pd.read_csv('sample_submission.csv')\n",
         "df_gen['SalePrice'] =pred\n",
-        "df_gen.to_csv('sample_submission_3.csv', index=False)"
+        "df_gen.to_csv('sample_submission_4.csv', index=False)"
       ],
-      "execution_count": 195,
+      "execution_count": 39,
       "outputs": []
     }
   ]
